ajout menu login

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="infos-menu">
         <div class="wrapper-menu">
             <img id="logo" src="/assets/img/logo.png" alt="logo">
-            <a href="#"><i class="lab la-4x la-discord white"></i></a>
-            <a href="#"><i class="lab la-4x la-facebook white"></i></a>
-            <a href="#"><i class="las la-4x la-at white"></i></a>
+            <a href="#"><i class="lab la-3x la-discord white"></i></a>
+            <a href="#"><i class="lab la-3x la-facebook white"></i></a>
+            <a href="#"><i class="las la-3x la-at white"></i></a>
         </div>
         <div class="login">
             <fieldset class="field-container">
@@ -28,7 +28,13 @@
                     <div class="icon-search"></div>
                 </div>
             </fieldset>
-            <a href="#"><i class="lar la-4x la-user white"></i></a>
+            <div class="dropdown-login">
+                <i class="lar la-4x la-user white dropdown-sign-in"></i>
+                <div class="dropdown-content">
+                    <a href="#">Connexion</a>
+                    <a href="#">S'enregistrer</a>
+                </div>
+            </div>
         </div>
     </div>
     <div id="wrap">
@@ -53,7 +59,7 @@
     </div>
     <!-- wrap -->
     <main class="main">
-        <h1 class="hot">What's Hot</h1>
+        <h1 class="hot"> Manga à la une</h1>
         <section class="cards">
             <div class="card">
                 <img src="assets/img/card1.PNG" alt="">
@@ -170,8 +176,64 @@
                 <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </section>
+        <section class="cards">
+            <div class="card">
+                <img src="assets/img/card1.PNG" alt="">
+                <div class="stats">
+                    <div class="views">
+                        <i class="las la-eye white"></i>
+                        <p>150 Vues</p>
+                    </div>
+                    <div class="rating">
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star-half white"></i>
+                        <p></p>
+                    </div>
+                </div>
+                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
 
+            <div class="card">
+                <img src="assets/img/card3.PNG" alt="">
+                <div class="stats">
+                    <div class="views">
+                        <i class="las la-eye white"></i>
+                        <p>150 Vues</p>
+                    </div>
+                    <div class="rating">
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star-half white"></i>
+                        <p></p>
+                    </div>
+                </div>
+                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
 
+            <div class="card">
+                <img src="assets/img/card2.PNG" alt="">
+                <div class="stats">
+                    <div class="views">
+                        <i class="las la-eye white"></i>
+                        <p>150 Vues</p>
+                    </div>
+                    <div class="rating">
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star-half white"></i>
+                        <p></p>
+                    </div>
+                </div>
+                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </section>
     </main>
 
 </body>
