--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- wrap -->
     <main class="main">
-        <h1 class="hot"> Manga à la une</h1>
+        <h1 class="hot"> Manga en cours</h1>
         <section class="cards">
             <div class="card">
                 <img src="assets/img/card1.PNG" alt="">
