--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
 
 
 </head>
@@ -18,28 +18,22 @@
     <div class="infos-menu">
         <div class="wrapper-menu">
             <img id="logo" src="/assets/img/logo.png" alt="logo">
-            <a href="#"><i class="lab la-3x la-discord white"></i></a>
-            <a href="#"><i class="lab la-3x la-facebook white"></i></a>
-            <a href="#"><i class="las la-3x la-at white"></i></a>
+            <a href="https://discord.gg/3HH8Usj"><i class="lab la-3x la-discord white"></i></a>
+            <a href="#"><i class="lab la-3x la-telegram white"></i></a>
+            <a href="#"><i class="las la-3x la-info-circle white"></i></a>
         </div>
-        <div class="login">
-            <fieldset class="field-container">
-                <input type="text" placeholder="Search..." class="st-default-search-input field" />
-                <div class="icons-container">
-                    <div class="icon-search"></div>
-                </div>
-            </fieldset>
+        <!-- <div class="login">
             <div class="dropdown-login">
                 <i class="lar la-4x la-user white dropdown-sign-in"></i>
                 <div class="dropdown-content">
                     <a href="#">Connexion</a>
                     <a href="#">S'enregistrer</a>
                 </div>
-            </div>
-        </div>
+            </div> -->
+    </div>
     </div>
     <!--  nav burger -->
-    <div class="nav-toggle">
+    <!-- <div class="nav-toggle">
         <div class="nav-toggle-bar"></div>
     </div>
     <nav id="nav" class="nav">
@@ -51,34 +45,18 @@
             <li><a href="#">Naruto</a></li>
             <li><a href="#">Hunter x hunter</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
     <!-- wrap -->
     <main class="main">
-        <h1 class="hot"> Manga en cours</h1>
-        <section class="cards">
-            <div class="card">
-                <img src="assets/img/card1.PNG" alt="">
-                <div class="stats">
-                    <div class="views">
-                        <i class="las la-eye white"></i>
-                        <p>150 Vues</p>
-                    </div>
-                    <div class="rating">
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star-half white"></i>
-                        <p></p>
-                    </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
 
-            <div class="card">
-                <img src="assets/img/card3.PNG" alt="">
-                <div class="stats">
+        <!-- <h1 class="hot"> Manga en cours</h1> -->
+        <div class="content">
+            <section class="cards">
+                <a href="single.html">
+                    <div class="card">
+                        <img class="cover" src="assets/img/cover1.jpg" alt="">
+                        <!-- <div class="stats">
                     <div class="views">
                         <i class="las la-eye white"></i>
                         <p>150 Vues</p>
@@ -91,13 +69,16 @@
                         <i class="las la-star-half white"></i>
                         <p></p>
                     </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
+                </div> -->
+                        <!-- <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
+                        <h1 class="white">One piece</h1>
+                    </div>
+                </a>
 
-            <div class="card">
-                <img src="assets/img/card2.PNG" alt="">
-                <div class="stats">
+                <a href="single.html">
+                    <div class="card">
+                        <img class="cover" src="assets/img/cover5.jpg" alt="">
+                        <!-- <div class="stats">
                     <div class="views">
                         <i class="las la-eye white"></i>
                         <p>150 Vues</p>
@@ -110,33 +91,16 @@
                         <i class="las la-star-half white"></i>
                         <p></p>
                     </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
-        </section>
-        <section class="cards">
-            <div class="card">
-                <img src="assets/img/card1.PNG" alt="">
-                <div class="stats">
-                    <div class="views">
-                        <i class="las la-eye white"></i>
-                        <p>150 Vues</p>
+                </div> -->
+                        <!-- <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
+                        <h1 class="white">Highschool of te dead</h1>
                     </div>
-                    <div class="rating">
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star-half white"></i>
-                        <p></p>
-                    </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
+                </a>
 
-            <div class="card">
-                <img src="assets/img/card3.PNG" alt="">
-                <div class="stats">
+                <a href="single.html">
+                    <div class="card">
+                        <img class="cover" src="assets/img/cover6.jpg" alt="">
+                        <!-- <div class="stats">
                     <div class="views">
                         <i class="las la-eye white"></i>
                         <p>150 Vues</p>
@@ -149,52 +113,19 @@
                         <i class="las la-star-half white"></i>
                         <p></p>
                     </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
+                </div> -->
+                        <!-- <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
+                        <h1 class="white">Hunter X Hunter</h1>
+                    </div>
+                </a>
 
-            <div class="card">
-                <img src="assets/img/card2.PNG" alt="">
-                <div class="stats">
-                    <div class="views">
-                        <i class="las la-eye white"></i>
-                        <p>150 Vues</p>
-                    </div>
-                    <div class="rating">
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star-half white"></i>
-                        <p></p>
-                    </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
-        </section>
-        <section class="cards">
-            <div class="card">
-                <img src="assets/img/card1.PNG" alt="">
-                <div class="stats">
-                    <div class="views">
-                        <i class="las la-eye white"></i>
-                        <p>150 Vues</p>
-                    </div>
-                    <div class="rating">
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star white"></i>
-                        <i class="las la-star-half white"></i>
-                        <p></p>
-                    </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
+            </section>
+            <section class="cards">
 
-            <div class="card">
-                <img src="assets/img/card3.PNG" alt="">
-                <div class="stats">
+                <a href="single.html">
+                    <div class="card">
+                        <img class="cover" src="assets/img/cover7.jpg" alt="">
+                        <!-- <div class="stats">
                     <div class="views">
                         <i class="las la-eye white"></i>
                         <p>150 Vues</p>
@@ -207,13 +138,16 @@
                         <i class="las la-star-half white"></i>
                         <p></p>
                     </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
+                </div> -->
+                        <!-- <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
+                        <h1 class="white">Naruto</h1>
+                    </div>
+                </a>
 
-            <div class="card">
-                <img src="assets/img/card2.PNG" alt="">
-                <div class="stats">
+                <a href="single.html">
+                    <div class="card">
+                        <img class="cover" src="assets/img/cover8.jpg" alt="">
+                        <!-- <div class="stats">
                     <div class="views">
                         <i class="las la-eye white"></i>
                         <p>150 Vues</p>
@@ -226,13 +160,39 @@
                         <i class="las la-star-half white"></i>
                         <p></p>
                     </div>
-                </div>
-                <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
-        </section>
+                </div> -->
+                        <!-- <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
+                        <h1 class="white">Demon Slayer</h1>
+                    </div>
+                </a>
+
+                <a href="single.html">
+                    <div class="card">
+                        <img class="cover" src="assets/img/cover9.jpg" alt="">
+                        <!-- <div class="stats">
+                    <div class="views">
+                        <i class="las la-eye white"></i>
+                        <p>150 Vues</p>
+                    </div>
+                    <div class="rating">
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star white"></i>
+                        <i class="las la-star-half white"></i>
+                        <p></p>
+                    </div>
+                </div> -->
+                        <!-- <p class="resume">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p> -->
+                        <h1 class="white">Dragon Ball Super</h1>
+                    </div>
+                </a>
+            </section>
+        </div>
+        <!-- content-->
     </main>
 
 </body>
-<script src="assets/js/nav.js"></script>
+<!-- <script src="assets/js/nav.js"></script> -->
 
 </html>
